--- a/first.html
+++ b/first.html
@@ -112,8 +112,8 @@
         /* Hero Section */
         .hero {
             background-image: 
-                linear-gradient(to bottom, rgba(10, 37, 64, 0.7), rgba(10, 37, 64, 0.85)),
-                url('/placeholder.svg?height=800&width=1600');
+                linear-gradient(to bottom, rgba(10, 37, 64, 0.75), rgba(10, 37, 64, 0.85)),
+                url('https://app.groundfloor.us/assets/onboarding-background-min-DNhBbaVw.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -131,8 +131,8 @@
             font-size: 3.5rem;
             margin-bottom: 1.5rem;
             line-height: 1.2;
-            color: var(--white);
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+            color: #ffffff;
+            text-shadow: 0 2px 8px rgba(0,0,0,0.5);
         }
 
         .hero p {
@@ -141,8 +141,8 @@
             max-width: 800px;
             margin-left: auto;
             margin-right: auto;
-            color: var(--white);
-            text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+            color: #ffffff;
+            text-shadow: 0 1px 4px rgba(0,0,0,0.5);
         }
 
         .hero-stats {
@@ -155,23 +155,24 @@
 
         .stat {
             text-align: center;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.4);
             padding: 1.5rem 2rem;
             border-radius: 10px;
             backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .stat-number {
             font-size: 2.5rem;
             font-weight: bold;
-            color: var(--white);
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+            color: #ffffff;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
         }
 
         .stat-label {
             font-size: 1rem;
-            color: var(--white);
-            text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+            color: #ffffff;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
         }
 
         /* Section Styles */
