--- a/first.html
+++ b/first.html
@@ -111,11 +111,17 @@
         }
 
         /* Hero Section */
+        /* Using crossorigin attribute and fallback background */
         .hero {
-            background-image: url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/onboarding-background-min-DNhBbaVw-QkTjyISPI4XNJ3c5wY3UZU59YHupl9.jpeg');
+            /* Try to load the image with crossorigin, fallback to gradient if it fails */
+            background-image: 
+                linear-gradient(to bottom, rgba(10, 37, 64, 0.4), rgba(10, 37, 64, 0.85)),
+                url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/onboarding-background-min-DNhBbaVw-QkTjyISPI4XNJ3c5wY3UZU59YHupl9.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+            /* Fallback gradient background if image doesn't load */
+            background-color: #8B4513;
             color: var(--white);
             padding: 6rem 2rem;
             text-align: center;
@@ -136,8 +142,9 @@
             left: 0;
             right: 0;
             height: 60%;
-            background: linear-gradient(to top, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.4) 50%, transparent 100%);
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.5) 50%, transparent 100%);
             pointer-events: none;
+            z-index: 0;
         }
 
         .hero-content {
@@ -149,12 +156,13 @@
         }
 
         .hero-text-box {
-            background: rgba(0, 0, 0, 0.6);
-            backdrop-filter: blur(10px);
+            background: rgba(0, 0, 0, 0.75);
+            backdrop-filter: blur(15px);
             padding: 2rem 3rem;
             border-radius: 15px;
             margin-bottom: 2rem;
             display: inline-block;
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .hero h1 {
@@ -163,21 +171,24 @@
             line-height: 1.2;
             color: #ffffff;
             font-weight: 700;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         .hero-subtitle {
-            background: rgba(0, 0, 0, 0.6);
-            backdrop-filter: blur(10px);
+            background: rgba(0, 0, 0, 0.75);
+            backdrop-filter: blur(15px);
             padding: 1.5rem 2.5rem;
             border-radius: 12px;
             margin-bottom: 2rem;
             display: inline-block;
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .hero p {
             font-size: 1.3rem;
             color: #ffffff;
             margin: 0;
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
         }
 
         .hero-stats {
@@ -190,10 +201,10 @@
 
         .stat {
             text-align: center;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.8);
             padding: 1.5rem 2rem;
             border-radius: 12px;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(15px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             min-width: 150px;
         }
@@ -202,12 +213,14 @@
             font-size: 2.5rem;
             font-weight: bold;
             color: #ffffff;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
         }
 
         .stat-label {
             font-size: 1rem;
             color: #ffffff;
             opacity: 0.95;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         /* Section Styles */
