--- a/first.html
+++ b/first.html
@@ -120,8 +120,8 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            /* Fallback gradient background if image doesn't load */
-            background-color: #8B4513;
+            /* Updated fallback background color to light mint/teal */
+            background-color: rgb(182, 227, 212);
             color: var(--white);
             padding: 6rem 2rem;
             text-align: center;
