--- a/first.html
+++ b/first.html
@@ -196,42 +196,44 @@
             padding-bottom: 3rem;
         }
 
-        /* Changed hero text boxes and stats to darker teal for better contrast */
+        /* Combined hero text box for single line layout */
         .hero-text-box {
             background: rgba(45, 135, 120, 0.9);
             backdrop-filter: blur(15px);
-            padding: 2rem 3rem;
+            padding: 1.5rem 2.5rem;
             border-radius: 15px;
             margin-bottom: 2rem;
             display: inline-block;
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
+        /* Reduced font size for hero heading */
         .hero h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1rem;
+            font-size: 2rem;
+            margin: 0;
             line-height: 1.2;
             color: #ffffff;
             font-weight: 700;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            display: inline;
         }
 
+        /* Removed separate subtitle box, now inline */
         .hero-subtitle {
-            /* Changed to darker teal for better text contrast */
-            background: rgba(45, 135, 120, 0.9);
-            backdrop-filter: blur(15px);
-            padding: 1.5rem 2.5rem;
-            border-radius: 12px;
-            margin-bottom: 2rem;
-            display: inline-block;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .hero p {
-            font-size: 1.3rem;
+            display: inline;
+            font-size: 2rem;
             color: #ffffff;
             margin: 0;
             text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+            font-weight: 400;
+        }
+
+        .hero p {
+            font-size: 2rem;
+            color: #ffffff;
+            margin: 0;
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+            display: inline;
         }
 
         .hero-stats {
@@ -1087,11 +1089,12 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
+            <!-- Combined both texts into single box on one line -->
             <div class="hero-text-box">
                 <h1 class="text-white">Invest Next Door</h1>
-            </div>
-            <div class="hero-subtitle">
-                <p class="text-white">Real Estate Investing Reimagined.</p>
+                <span class="hero-subtitle">
+                    <p class="text-white"> - Real Estate Investing Reimagined.</p>
+                </span>
             </div>
             <div class="hero-stats">
                 <div class="stat">
